--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,3 @@
-<!-- quiz.ejs -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,25 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Quiz</title>
+    <title>Quiz App</title>
 </head>
 <body>
-    <h1>Quiz</h1>
-    <button id="startQuizBtn">Start Quiz</button>
-    <form action="/submit" method="POST" id="quizForm" style="display: none;">
-        <% questions.forEach((question, index) => { %>
-            <div class="question" id="question<%= index %>">
-                <h2><%= index + 1 %>. <%= question.question %></h2>
-                <% question.options.forEach((option) => { %>
-                    <label>
-                        <input type="radio" name="answer<%= index %>" value="<%= option %>">
-                        <%= option %>
-                    </label><br>
-                <% }) %>
-            </div>
-        <% }) %>
-        <button type="submit">Submit Quiz</button>
-    </form>
+    <div class="container">
+        <h1>Welcome to the Quiz App</h1>
+        <button id="startQuizBtn" class="btn primary-btn">Start Quiz</button>
+        <form action="/submit" method="POST" id="quizForm" style="display: none;">
+            <% questions.forEach((question, index) => { %>
+                <div class="question" id="question<%= index %>">
+                    <h2><%= index + 1 %>. <%= question.question %></h2>
+                    <% question.options.forEach((option) => { %>
+                        <label class="option">
+                            <input type="radio" name="answer<%= index %>" value="<%= option %>">
+                            <%= option %>
+                        </label><br>
+                    <% }) %>
+                </div>
+            <% }) %>
+            <button type="submit" class="btn primary-btn">Submit Quiz</button>
+        </form>
+    </div>
 
     <script>
         document.getElementById('startQuizBtn').addEventListener('click', function() {
