--- a/views/result.ejs
+++ b/views/result.ejs
@@ -1,17 +1,23 @@
-<!-- result.ejs -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
     <title>Quiz Result</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1>Quiz Result</h1>
-    <p>Your score is: <%= score %></p>
-    <a href="/">Back to Home</a>
+    <div class="container">
+        <h1>Quiz Result</h1>
+        <p>Your score: <%= score %></p>
+        <button id="goBackBtn" class="btn primary-btn">Go Back</button>
+    </div>
+
+    <script>
+        document.getElementById('goBackBtn').addEventListener('click', function() {
+            window.location.href = '/';
+        });
+    </script>
 </body>
 </html>
